# Cool-Simulations

./: README.md
ParticleSimulation/: CMakeLists.txt  glad.c  main.cpp
dependencies/include/glad/: glad.h
include/: particle.h
src/: main.cpp  particle.cpp  particle.h
